# ComfyUI-Jimeng

./: README.md  nodes.py  pyproject.toml
example_workflows/: example_image2video.json
